# mutalisk

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md
fixtures/: khala_fleet_delegation_demo.json
src/mutalisk/: __init__.py  candidate.py  delegation.py  demo.py  emitter.py  eval_set.py  optimize.py  optimizer.py  program.py  runner.py  signatures.py  trace_eval.py
tests/: test_candidate.py  test_cli.py  test_delegation.py  test_delegation_adapter.py  test_demo.py  test_emitter.py  test_gepa_optimizer.py  test_optimizer.py  test_program.py  test_runner.py  test_signatures.py  test_trace_eval.py
